k8s/manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "gce"

spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
